# willow-types

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  serde_helpers.rs  state_proof.rs  verifiable_rpc.rs
src/bridge/: types.rs
src/consensus/: chains.rs  manifest.rs  mod.rs  transactions.rs
src/consensus/dispute_resolution/: canonical_hash.rs  merkle_tree.rs  mod.rs  transactions.rs  types.rs
src/consensus/indexing_transactions/: commitment_liveness.rs  data_updates.rs  execution_modes.rs  gkr_proof_types.rs  historical_availability.rs  historical_checkpoints.rs  indexer_config.rs  mod.rs  reputation.rs  slashing.rs  subgrove_deployment.rs  warp_proof_types.rs
src/indexer_node/: mod.rs
src/indexer_node/consensus_submitter/: types.rs
src/indexing/: mod.rs
src/p2p/: mod.rs
src/p2p/waku/: config.rs
src/reputation/: types.rs
src/state_sync/: mod.rs
src/storage/: anchor_head.rs  file_types.rs  mod.rs  types.rs
src/tee/: enclave_transactions.rs  mod.rs  types.rs
src/token/: mod.rs  units.rs
