[package]
name = "willow-types"
version = "0.1.0"
edition = "2021"
authors = ["Paul DeLucia"]
description = "Shared data types for the Willow protocol"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
