[package]
name = "willow-types"
version = "0.1.0"
edition = "2021"
authors = ["Paul DeLucia"]
description = "Shared data types for the Willow protocol"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# `raw_value` is used by `serde_helpers::u128_flexible` to read a JSON
# u128 losslessly regardless of whether the sender encoded it as a
# number (Rust SDK) or a string (TypeScript SDK). Without it,
# serde_json's default `deserialize_any` path routes large integers
# through f64 and silently loses precision above 2^53.
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"

[lints]
workspace = true
