[package]
name = "willow-types"
version = "0.1.0"
edition = "2021"
authors = ["Paul DeLucia"]
description = "Shared data types for the Willow protocol"
license = "MIT"
repository = "https://github.com/willow-network/willow-types"
keywords = ["willow", "web3", "indexing", "decentralized", "blockchain"]
categories = ["web-programming", "cryptography", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# `raw_value` is used by `serde_helpers::u128_flexible` to read a JSON
# u128 losslessly regardless of whether the sender encoded it as a
# number (Rust SDK) or a string (TypeScript SDK). Without it,
# serde_json's default `deserialize_any` path routes large integers
# through f64 and silently loses precision above 2^53.
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Base58 codec for Solana pubkeys / program ids. Pure-Rust, no transitive
# deps; used only by `consensus::manifest::SolanaPubkey`.
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"

[dev-dependencies]
# Used only by `serde_helpers` tests to assert that the JSON-leaning
# helpers stay bincode-safe — consensus deserializes `Transaction` via
# bincode, so any helper attached to a tx field must round-trip.
bincode = "1.3"

# Inlined (not `workspace = true`) so the crate publishes standalone
# without depending on a parent workspace.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
result_large_err = "allow"
large_enum_variant = "allow"
